--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "dotenv": "^8.1.0",
     "ejs": "^2.7.1",
     "express": "^4.17.1",
-    "request": "^2.88.0"
+    "netlify-lambda": "^1.6.3",
+    "request": "^2.88.0",
+    "serverless-http": "^2.3.0"
   }
 }
